--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/VladFiliucov/blogster#readme",
   "dependencies": {
     "babel-preset-react": "^6.24.1",
+    "express": "^4.15.3",
     "lodash": "^4.17.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
